objects/hed__Course_Enrollment__c.object
<CustomObject><fields>
        <fullName>Course_Name__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <formula>hed__Course_Offering__r.hed__Term__r.Name</formula>
        <label>Term</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student taking the course.</description>
        <inlineHelpText>The student taking the course.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Student_Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering the student is enrolled in. It's a Course offered at a specific Term.</description>
        <inlineHelpText>The Course Offering the student is enrolled in. It's a Course offered at a specific Term.</inlineHelpText>
        <label>Course Offering ID</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Enrollment record number for the Program the student is enrolled in. Links a student with an Academic Program.</description>
        <inlineHelpText>The Program Enrollment record number for the Program the student is enrolled in. Links a student with an Academic Program.</inlineHelpText>
        <label>Program Enrollment ID</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program the student is enrolled in.</description>
        <inlineHelpText>The Academic Program the student is enrolled in.</inlineHelpText>
        <label>Contact's Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliation</label>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Subject_Code__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.Subject_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Reference_Number__c</fullName>
        <label>Course Reference Number</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Grade__c</fullName>
        <label>Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.hed__Account__r.Name</formula>
        <label>Department</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Faculty__c</fullName>
        <formula>hed__Course_Offering__r.hed__Faculty__r.FirstName + ' ' +  hed__Course_Offering__r.hed__Faculty__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_ID__c</fullName>
        <formula>IF( RecordType.Name = "Banner Course Connection",  hed__Course_Offering__r.hed__Course__r.Subject_Name__c   &amp; " "&amp; hed__Course_Offering__r.hed__Course__r.Course_Number__c &amp; " ("&amp;
 hed__Course_Offering__r.hed__Section_ID__c &amp;")",  Course_Offering_Name__c )</formula>
        <label>Course ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Offering_Name__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Offering Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Status__c</fullName>
        <description>Represents the Status of the Course Connection.</description>
        <inlineHelpText>Represents the Status of the Course Connection.  Use Course Added for current course enrollment.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Course Added</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Course Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn from Course (W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Course_Number__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.Course_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents a Primary Course Connection.</description>
        <inlineHelpText>Represents a Primary Course Connection.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Grade_Change_Reason__c</fullName>
        <label>Grade Change Reason</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Athlete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supports the athlete add/drop alert functionality.</description>
        <inlineHelpText>System field, not needed for a page layout.</inlineHelpText>
        <label>Athlete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SI_Hours__c</fullName>
        <label>SI Hours</label>
        <summarizedField>LP_Attendee__c.LP_Attendee_Hours__c</summarizedField>
        <summaryForeignKey>LP_Attendee__c.Course_Enrollment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>175</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Letter_Grade__c</fullName>
        <label>Letter Grade</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Eligible_to_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Tutor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>College__c</fullName>
        <formula>hed__Course_Offering__r.hed__Course__r.College__r.Name</formula>
        <label>College</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates an Active Course Enrollment, not a withdraw and not final grade available for the current term.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Received_Tutoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Tutoring</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Course_Enrollment_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Represents a connection to a Course Offering.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Course Connection</label><nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Course Connection ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Course Connections</pluralLabel><sharingModel>Read</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>hed__Contact__c</columns>
        <columns>hed__Course_Offering__c</columns>
        <columns>Course_ID__c</columns>
        <columns>Course_Offering_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Course_Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Banner_Course_Connection</fullName>
        <active>true</active>
        <label>Banner Course Connection</label>
    </recordTypes><recordTypes>
        <fullName>LWC_Course_Connection</fullName>
        <active>true</active>
        <label>LWC Course Connection</label>
    </recordTypes></CustomObject>